--- a/PADAWAN.CRUD.Context2/PADAWAN.CRUD.Context.csproj
+++ b/PADAWAN.CRUD.Context2/PADAWAN.CRUD.Context.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PADAWAN.CRUD.Models\PADAWAN.CRUD.Models.csproj" />
+    <ProjectReference Include="..\PADAWAN.CRUD.Models3\PADAWAN.CRUD.Models.csproj" />
   </ItemGroup>
 
 </Project>
