--- a/PADAWAN.CRUD.Boletim/PADAWAN.CRUD.Boletim.csproj
+++ b/PADAWAN.CRUD.Boletim/PADAWAN.CRUD.Boletim.csproj
@@ -9,7 +9,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,15 +18,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PADAWAN.CRUD.Banco\PADAWAN.CRUD.Banco.csproj" />
     <ProjectReference Include="..\PADAWAN.CRUD.Context2\PADAWAN.CRUD.Context.csproj" />
-    <ProjectReference Include="..\PADAWAN.CRUD.Models\PADAWAN.CRUD.Models.csproj" />
+    <ProjectReference Include="..\PADAWAN.CRUD.Models3\PADAWAN.CRUD.Models.csproj" />
   </ItemGroup>
 
 
