--- a/PADAWAN.CRUD.View2/PADAWAN.CRUD.View.csproj
+++ b/PADAWAN.CRUD.View2/PADAWAN.CRUD.View.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,7 +22,7 @@
     <ProjectReference Include="..\PADAWAN.CRUD.Banco\PADAWAN.CRUD.Banco.csproj" />
     <ProjectReference Include="..\PADAWAN.CRUD.Boletim\PADAWAN.CRUD.Boletim.csproj" />
     <ProjectReference Include="..\PADAWAN.CRUD.Context2\PADAWAN.CRUD.Context.csproj" />
-    <ProjectReference Include="..\PADAWAN.CRUD.Models\PADAWAN.CRUD.Models.csproj" />
+    <ProjectReference Include="..\PADAWAN.CRUD.Models3\PADAWAN.CRUD.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
